Changing the classes naming.
