# src/Presentation/EndpointsCommon/_EndpointTags.cs
@@ -1,0 +1,7 @@
+﻿namespace Presentation.EndpointsCommon
+{
+    public static class EndpointTags
+    {
+        public const string ProductEndpoints = "Products Endpoints";
+    }
+}
